--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
             letter-spacing: 1px;
         }
 
-        .logo i {
-            color: var(--accent);
+        .logo img {
+            height: 40px;
             margin-right: 10px;
-            font-size: 2rem;
         }
 
         .logo span {
@@ -564,6 +563,14 @@
             border-top: 1px solid rgba(0, 255, 255, 0.3);
         }
 
+        .footer-logo {
+            margin-bottom: 30px;
+        }
+
+        .footer-logo img {
+            height: 60px;
+        }
+
         .social-links {
             margin-bottom: 30px;
         }
@@ -649,8 +656,8 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <i class="fas fa-headphones"></i>
-                DJ <span>Lei Castillo</span>
+                <img src="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f" alt="DJ Lei Castillo Logo">
+                <span>DJ Lei Castillo</span>
             </div>
             <nav>
                 <ul>
@@ -914,12 +921,13 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <div class="footer-logo">
+                <img src="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f" alt="DJ Lei Castillo Logo">
+            </div>
             <div class="social-links">
-                <a href="https://facebook.com/djleicastillo" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://instagram.com/djleicastillo" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/djleicastillo" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://youtube.com/djleicastillo" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://tiktok.com/@djleicastillo" target="_blank"><i class="fab fa-tiktok"></i></a>
+                <a href="https://www.facebook.com/share/1CvkRXYWdj/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/djleicastillo?igsh=cmRrMnZueDcycTVw" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@djleicastillo?_t=ZS-8z17oCUzyND&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
             </div>
             
             <p class="copyright">© 2023 DJ Lei Castillo. Todos los derechos reservados. | Diseñado con <i class="fas fa-heart" style="color: var(--accent);"></i> para crear experiencias inolvidables</p>
