--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>DJ Lei Castillo - Sonido, Estructura e Iluminación Profesional</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Favicon con múltiples formatos para máxima compatibilidad -->
+    <link rel="icon" type="image/x-icon" href="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f">
+    <link rel="icon" type="image/png" href="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f">
+    <link rel="apple-touch-icon" href="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f">
+    <!-- Forzar la recarga del favicon -->
+    <link rel="shortcut icon" href="https://z-cdn-media.chatglm.cn/files/e753e456-3c2f-4266-affb-ed9d9f0437ea_Logo-Lei2%20%282%29.png?auth_key=1791063858-dfc65f9431b5420a97525d2d783fba45-0-09deb48180fe31e74fdcd99e9d8fc29f?v=2" type="image/x-icon">
     <style>
         :root {
             --primary: #0a0a0a;
@@ -954,3 +960,4 @@
     </script>
 </body>
 </html>
+
